--- a/IngresoPersonas/IngresoPersonas.Android/IngresoPersonas.Android.csproj
+++ b/IngresoPersonas/IngresoPersonas.Android/IngresoPersonas.Android.csproj
@@ -95,5 +95,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\person.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\fon.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
